gobmkida/g3/store_delta_territory_cache
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_delta_territory_cache/src/engine/influence.c:2097:7: error: conflicting types for 'store_delta_territory_cache'
void  store_delta_territory_cache( int pos, int color, float a3, float move_value, float followup_value) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_delta_territory_cache/src/engine/liberty.h:648:6: note: previous declaration is here
void store_delta_territory_cache(int pos, int color, float move_value,
     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_delta_territory_cache/src/engine/influence.c:2122:12: error: expected expression
*( _OWORD *)v6 = xmmword_4B08A0; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_delta_territory_cache/src/engine/influence.c:2122:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v6 = xmmword_4B08A0; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/store_delta_territory_cache/src/obj/1/influence.o] Error 1
